--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -43,14 +43,25 @@
                                             <action selector="muteUnMute:" destination="BYZ-38-t0r" eventType="touchUpInside" id="726-Hy-7ET"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yoq-hz-v5k">
+                                        <rect key="frame" x="340.5" y="52" width="43.5" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="ellipsis" catalog="system"/>
+                                        <connections>
+                                            <segue destination="SYv-TM-3vy" kind="show" identifier="segueParam" id="Lfl-D1-eHX"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="izb-oz-cHp" firstAttribute="centerY" secondItem="aZ3-8G-FEO" secondAttribute="centerY" id="DWO-DV-1NI"/>
                                     <constraint firstItem="izb-oz-cHp" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="aZ3-8G-FEO" secondAttribute="trailing" constant="8" symbolic="YES" id="Nef-wm-jxI"/>
+                                    <constraint firstAttribute="trailing" secondItem="Yoq-hz-v5k" secondAttribute="trailing" constant="30" id="RYo-Y5-x2P"/>
+                                    <constraint firstItem="Yoq-hz-v5k" firstAttribute="top" secondItem="Pir-Wf-dKx" secondAttribute="top" constant="52" id="SHS-Au-zn0"/>
                                     <constraint firstItem="rZa-oB-ZZG" firstAttribute="centerY" secondItem="aZ3-8G-FEO" secondAttribute="centerY" id="UfG-Jl-nYz"/>
                                     <constraint firstItem="rZa-oB-ZZG" firstAttribute="leading" secondItem="Pir-Wf-dKx" secondAttribute="leading" constant="40" id="WC6-VG-lLZ"/>
                                     <constraint firstItem="aZ3-8G-FEO" firstAttribute="leading" secondItem="rZa-oB-ZZG" secondAttribute="trailing" constant="94" id="Zb0-dO-yTJ"/>
+                                    <constraint firstItem="Yoq-hz-v5k" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Pir-Wf-dKx" secondAttribute="leading" constant="20" symbolic="YES" id="ZcD-Js-R2H"/>
                                     <constraint firstItem="aZ3-8G-FEO" firstAttribute="centerX" secondItem="Pir-Wf-dKx" secondAttribute="centerX" id="ahw-75-DI8"/>
                                     <constraint firstAttribute="bottom" secondItem="aZ3-8G-FEO" secondAttribute="bottom" constant="42" id="rcc-GX-zez"/>
                                     <constraint firstAttribute="trailing" secondItem="izb-oz-cHp" secondAttribute="trailing" constant="40" id="uCY-1y-ddy"/>
@@ -81,30 +92,55 @@
             <objects>
                 <viewController id="vcb-d4-8kg" customClass="SettingsViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Q8I-Rm-6Gq">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s0V-mu-hkT">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                            </scrollView>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ygH-Go-BAf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="ygH-Go-BAf" firstAttribute="bottom" secondItem="s0V-mu-hkT" secondAttribute="bottom" id="Gwm-0F-zZ1"/>
-                            <constraint firstItem="ygH-Go-BAf" firstAttribute="trailing" secondItem="s0V-mu-hkT" secondAttribute="trailing" id="apA-KQ-j2m"/>
-                            <constraint firstItem="s0V-mu-hkT" firstAttribute="top" secondItem="ygH-Go-BAf" secondAttribute="top" id="uXV-zq-aky"/>
-                            <constraint firstItem="s0V-mu-hkT" firstAttribute="leading" secondItem="ygH-Go-BAf" secondAttribute="leading" id="vrc-Y9-WpC"/>
-                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="1tg-et-66z"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="daB-ss-e0l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1931.8840579710147" y="118.52678571428571"/>
+        </scene>
+        <!--List View Controller-->
+        <scene sceneID="Ypd-Il-fKs">
+            <objects>
+                <viewController storyboardIdentifier="ListView" id="rk2-ah-lXl" customClass="ListViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SD0-rN-4lb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="TMe-wi-nA1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fn3-hH-LRS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2923" y="119"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zC6-YP-485">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SYv-TM-3vy" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="L6I-Tu-BKG"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="btg-PR-VB6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="108"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vcb-d4-8kg" kind="relationship" relationship="rootViewController" id="Gw3-r4-FdH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tJD-7C-yYl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1021.7391304347827" y="118.52678571428571"/>
         </scene>
     </scenes>
     <resources>
         <image name="camera.rotate" catalog="system" width="128" height="94"/>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="speaker.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
